8.4.9 (03-11-2022)
- Improvement: Allow the creation of individual tuition payment plan installments
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum
- Refactor: Method to create custom academic debts for default finantial entity

8.4.8 (20-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff and FinantialEntity

8.4.7 (14-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff

8.4.6 (23-09-2022)
- Refactor: Declare AcademicTreasuryEvent::getEventTargetCurrentState to retrieve to current state of the process associated with treasury event

8.4.5 (22-09-2022)
- Refactor: Do not throw exception in service to create customer if it is missing, instead return false if it is not created. The callers decide if exception is thrown or not. If exists return true.
- Improvement: Support creation of sibs payment references for extracurricular or standalone tuition debts, in academic debt generation rule.

8.4.4 (01-08-2022)
- Bug Fix: In finding the best academic tariff, if the administrative office is null then return the tariff for finantial entity

8.4.3 (19-07-2022)
- Refactor: Remove deprecated PaymentPenaltyEventTarget entity
- Refactor: Do not mark AcademicTariff::findMatch by CycleType as not deprecated
- Refactor: Do not register the AdministrativeOffice in the AcademicTariff entity

8.4.2 (05-07-2022)
- Refactor: Implement import and export operations for AcademicDebtGenerationRuleRestriction class and subclasses, in order to be able to migrate from other systems
- Refactor: Set constructor and checkRules of AcademicDebtGenerationRuleRestriction and subclasses as public in order to migrate

8.4.1 (30-06-2022)
- Bug Fix: Fix the missing return from calculating the tariff when the academic service request has the cycle type

8.4.0 (24-06-2022)
- Refactor: Change relation between ReservationTaxEventTarget and ExecutionInterval, instead of ExecutionYear