@@ -1,3 +1,5 @@
+- Improvement: Support assign payor debt account to tuition installments
+
 8.4.9 (03-11-2022)
 - Improvement: Allow the creation of individual tuition payment plan installments
 - Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum
